recursion.cons.butnlast.ButNlast.scala.error
Erreur de compilation :
ButNlast:6: error: not found: value butLast
    return l.head :: butLast(l.tail,n);
                     ^